@@ -43,3 +43,6 @@ v 1.3:
 v 1.4:
 	- Updated for Bukkits new YamlConfiguration.
 	- Cleared remaining Cast errors cause by object cloning.
+	- Removed extra notification messages for the player issuing the group move command.
+	- Added a config setting - bukkit_perms_override: false
+	  Enable to allow default Bukkit based permissions to remain enabled, unless directly negated within GroupManager.
